# FSOM

./: .gitignore  CMakeLists.txt  README  _clang-format  index.html  license.txt  params.json
include/fsom/: AbstractFactory.hpp  AdditiveSynthesisRegion.hpp  AudioFile.hpp  AudioFilePool.hpp  AudioRegion.hpp  Breakpoint.hpp  DSPManager.hpp  DummyRegion.hpp  Engine.hpp  Generator.hpp  GrainStream.hpp  GranularRegion.hpp  InterpControl.hpp  MetaDataStore.hpp  NoiseRegionBase.hpp  NoiseRegions.hpp  PaDriver.hpp  Parameter.hpp  Region.hpp  RegionManager.hpp  Session.hpp  SubtractiveSynthesisRegion.hpp  SynthesisModule.hpp  SynthesisModuleManager.hpp  SynthesisRegion.hpp  Table.hpp  TimeStretcher.hpp  Utilities.hpp  kissfft.hh
include/fsom/EffectClasses/: AsymmetricDelay.hpp  Biquad.hpp  Chorus.hpp  Convolution.hpp  DSPEffect.hpp  Delay.hpp  DelayBase.hpp  Distort.hpp  Echo.hpp  Envelope.hpp  Fade.hpp  FeedbackDelay.hpp  Filters.hpp  Flanger.hpp  Fragment.hpp  FrequencyModulation.hpp  Gain.hpp  Granulate.hpp  Harmonizer.hpp  ModulatedDelay.hpp  Modulators.hpp  Pan.hpp  Parameter.hpp  Reverb.hpp  Timestretch.hpp  Transpose.hpp  TransposeUnit.hpp
src/: AdditiveSynthesisRegion.cpp  AudioFile.cpp  AudioFilePool.cpp  AudioRegion.cpp  CMakeLists.txt  DSPManager.cpp  DummyRegion.cpp  Engine.cpp  Generator.cpp  GrainStream.cpp  GranularRegion.cpp  InterpControl.cpp  Makefile  MetaDataStore.cpp  NoiseRegionBase.cpp  NoiseRegions.cpp  PaDriver.cpp  Region.cpp  RegionManager.cpp  Session.cpp  SubtractiveSynthesisRegion.cpp  SynthesisModule.cpp  SynthesisModuleManager.cpp  SynthesisRegion.cpp  Utilities.cpp
src/EffectClasses/: AsymmetricDelay.cpp  Biquad.cpp  Chorus.cpp  Convolution.cpp  DSPEffect.cpp  Delay.cpp  Distort.cpp  Echo.cpp  Envelope.cpp  Fade.cpp  FeedbackDelay.cpp  Filters.cpp  Flanger.cpp  Fragment.cpp  FrequencyModulation.cpp  Gain.cpp  Granulate.cpp  Harmonizer.cpp  Modulators.cpp  Pan.cpp  Parameter.cpp  Reverb.cpp  Timestretch.cpp  Transpose.cpp  TransposeUnit.cpp
src/Freeverb/: CMakeLists.txt
src/tinyxml/: CMakeLists.txt  tinyxml.cpp
unit_test/: CMakeLists.txt  update_cmake.py
unit_test/src/: test_multichannelbuffer.cpp  test_table.cpp  test_template.cpp  unit_testing.h  unit_testing_main.cpp
